# risc-kana-layout

./: .gitignore  LICENSE  MANIFEST.in  ReadMe.md  index.html  pyproject.toml
assets/: audio-sprite.json  index-BCZR4oiQ.js  index-BGaloPon.js  index-BIjTuPT8.js  index-BRe9DEhK.js  index-BhVD_D4n.js  index-BpDcyauV.js  index-Bxg-naM3.js  index-C9cDKm7Y.js  index-CVHvn_JA.js  index-CeC8eL_X.js  index-CtRZP5g8.js  index-D4GMAKER.js  index-Ds9S6QXE.js  index-DsDWMHAy.js  index-DwHPpLtv.js  index-L54JGzes.js  index-XP9YT_E0.js  index-XTEjMoTW.js  index-XTfP9MZU.js  index-_Ix0-3ls.js  index-hmslFAxF.js  index-kTjT5LiH.js  index-p7z4pZCs.js  index-vOTTFgpQ.js  index-xc9Fti7U.js  index-yoadXOcX.js  index-yusyLfSc.js  layout.json  stage-data.json
doc/: RISC-kana-layout.md
risc_kana_layout/: __init__.py  calc_stat.py  constant.py  enum_shorthand_candidates.py  evaluate.py  format.py  optimize.py  prepare.py  prepare_arm.py  prepare_cc100.py  prepare_meidai_dialogue.py  prepare_wikipedia.py  trainer.py
risc_kana_layout/data/: basic_romantable.txt  initial_mora.txt  key_transition_score.txt  opt_start.txt  opt_third_complete.txt  shorthand.txt  symbol.txt
tests/: test_calc.py  test_evaluate.py  test_optimize.py  test_prepare.py  test_utils.py
tests/oracle/: test_opt_initial0.txt  test_opt_initial1.txt  test_opt_iteration0.txt  test_opt_iteration1.txt
trainer/: index.html  package-lock.json  package.json  vite.config.ts
trainer/public/assets/: audio-sprite.json
trainer/src/: main.ts  wit-text.ts
