[project]
name = "risc-kana-layout"
version = "0.1"
description = "Tools to explore/study RISC kana layout"
authors = [
  {name = "Hajime NAKAZATO", email = "hajime@kaoriha.org"},
]
readme = "ReadMe.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
keywords = ["keyboard", "japanese", "kana"]
dependencies = [
    "numpy==1.26.4",
    "jaconv==0.3.4",
    "markovify==0.9.4",
    "pyarrow==16.0.0",
    "pykakasi==2.2.1",
    "httpx==0.27.0",
    "stream-unzip==0.0.91",
    "polars==0.20.23",
    "mip==1.15.0",
    "matplotlib==3.8.4",
    "japanize_matplotlib==1.1.3",
    "mecab-python3==1.0.9",
    "unidic-lite==1.0.8",
    "openai==1.37.0",
]

[tool.setuptools.packages.find]
include = ["risc_kana_layout"]
